# mypm

./: .gitignore  README.md  TODO.md  pyproject.toml
config/: extensions.yml  global.yml  sample_custom_aliases.yml  sample_custom_definitions.yml  sample_gh_workflows.yml  sample_global.yml  sample_project_actions copy.yml  sample_projects.yml
src/mypm/: cli.py  main.py  settings.py
src/mypm/compiler/: assembler.py  custom_aliases.py  custom_definitions.py  generators.py  project_switcher.py
src/mypm/compiler/extensions/: gh_workflows.py  project_actions.py
src/mypm/installer/: install.py
src/mypm/setup_mypm/: setup.py
src/mypy/: cli.py  main.py
tests/: test_generators.py  test_gh_workflows.py  test_install.py  test_project_actions.py  test_setup.py
tests/mypm/: test_main.py
tests/mypm/compiler/: test_assembler.py  test_custom_aliases.py  test_custom_definitions.py  test_generators.py  test_project_switcher.py
tests/mypm/setup_mypm/: test_setup.py
